bigtent.com (archived on 2013-12-23)
{
  "alexa_rank": 41230,
  "analysis_subcorpus": true,
  "categories": "business;education;health",
  "char_count": 18596,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.79,
  "homepage_snapshot_redirected_domain": "bigtent.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130930060227id_/http://www.bigtent.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130930060227id_/http%3A//bigtent.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bigtent.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223131119id_/http%3A//www.bigtent.com/privacy",
  "policy_title": "How we collect and use member information | BigTent",
  "policy_url": "bigtent.com/privacy",
  "sha1": "9c8cf135891686f6593ff0ce888f58922bd7de5c",
  "simhash": 2075533975850779093,
  "simhash_updated": false,
  "site_hostname": "bigtent.com",
  "site_url": "http://bigtent.com",
  "smog": 15.77,
  "strict_updated": true,
  "timestamp": "20131223131119",
  "word_count": 2954,
  "year": 2013
}

--- a/b/bi/big/bigtent.com.html
+++ b/b/bi/big/bigtent.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bigtent.com privacy policy that was archived on 2013-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130625035804id_/http%3A//www.bigtent.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bigtent.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223131119id_/http%3A//www.bigtent.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns:fb="http://ogp.me/ns/fb#"><head><meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,8 +16,8 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <script type="text/javascript" src="http://bt.cdn.fm/javascripts/public/v2/index.js"></script>
-   	<script type="text/javascript" src="http://bt.cdn.fm/javascripts/public/v2/jquery.cycle.min.js?v=1365545504"></script>
-   	<script type="text/javascript" src="http://bt.cdn.fm/javascripts/public/v2/flipcounter.min.js?v=1365545504"></script>
+   	<script type="text/javascript" src="http://bt.cdn.fm/javascripts/public/v2/jquery.cycle.min.js?v=1387464723"></script>
+   	<script type="text/javascript" src="http://bt.cdn.fm/javascripts/public/v2/flipcounter.min.js?v=1387464723"></script>
   </head>
 <body>
   <div id="container">
@@ -50,7 +50,7 @@
 </div>
         <div class="main group">
 <div class="basic">
-<p>Privacy Policy last modified on February 6, 2011.</p>
+<p>Privacy Policy last modified on September 6, 2013.</p>
 
 <h1>BigTent's Privacy Policy</h1>
 		
@@ -172,7 +172,7 @@ our BigTent Site.</p>
   </li>
 </ul>
 <p>
-  <span style="text-decoration: underline">Third party advertisers</span>: Third party advertisers have no access to your personal profile information or User Content stored on the BigTent Site unless you choose to share it with them. They may have access to anonymous User Content in order to target contextually relevant advertisements. Advertisements that appear on BigTent are sometimes delivered (or "served") directly to users by third party advertisers. They automatically receive your IP address when this happens. These third party advertisers may also download cookies to your computer, or use other technologies such as JavaScript and "web beacons" (also known as "1x1 gifs") to measure the effectiveness of their ads and to personalize advertising content. BigTent does not have access to or control of the cookies that may be placed by the third party advertisers.
+  <span style="text-decoration: underline">Third party advertisers</span>: Third party advertisers have no access to your personal profile information or User Content stored on the BigTent Site unless you choose to share it with them. They may have access to anonymous User Content in order to target contextually relevant advertisements. Advertisements that appear on BigTent are sometimes delivered (or "served") directly to users by third party advertisers. They automatically receive your IP address when this happens. These third party advertisers may also download cookies to your computer, or use other technologies such as JavaScript and "web beacons" (also known as "1x1 gifs") to measure the effectiveness of their ads and to personalize advertising content. BigTent does not have access to or control of the cookies that may be placed by the third party advertisers or third party ad vendors. If you would like more information about this practice and to know your choices about not having this information used by these companies, please see: <a href="http://www.networkadvertising.org/managing/opt_out.asp">http://www.networkadvertising.org/managing/opt_out.asp</a>.
 </p>
 
 		
@@ -217,7 +217,7 @@ our BigTent Site.</p>
 
 
 <h3>Contacting BigTent</h3>
-<p>If you have any questions about this privacy policy, please contact us at privacy@bigtent.com. You may also contact us by mail at Big Tent Design, Inc., ATTN: PRIVACY, 72 Townsend Street, San Francisco, CA 94107.
+<p>If you have any questions about this privacy policy, please contact us at privacy@bigtent.com. You may also contact us by mail at  Care.com, Inc., 201 Jones Road, Suite 500, Waltham, MA 02451.
 </p>
 </div>
 </div>
@@ -234,13 +234,13 @@ our BigTent Site.</p>
 	  <li><a href="/signup">Start a Group</a><p>|</p></li>
 	  <li><a href="/sponsors">Advertise</a><p>|</p></li>
 	  <li><a href="http://blog.bigtent.com">Blog</a><p>|</p></li>
+	  <li><a href="http://m.bigtent.com">Mobile</a><p>|</p></li>
 	  <li><a href="http://support.bigtent.com/home">Contact Us</a><p>|</p></li>
 	  <li><a href="http://support.bigtent.com">Help</a><p>|</p></li>
 	  <li><a href="/terms">Terms</a><p>|</p></li>
 	  <li><a href="/privacy">Privacy</a></li>
   </ul>
-  <img class="fmlogo" src="/images/fmlogo.png"><br>
-  <div class="copy">© 2013 Federated Media Publishing, Inc.</div>
+  <div class="copy"><a href="http://www.care.com/-p1087-qxid|1203200124-rxonline_bigtent|seeker_general|footer||.html">© Care.com, Inc.</a></div>
 </div>
 
 
