--- a/m/ma/man/manaflask.com.html
+++ b/m/ma/man/manaflask.com.html
@@ -1,54 +1,77 @@
-<!--The following is the downloaded HTML source of the manaflask.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620015832id_/http%3A//manaflask.com/en/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the manaflask.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223181730id_/http%3A//www.manaflask.com/en/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
   <meta charset="UTF-8">
-  <link rel="dns-prefetch" href="//www.googletagservices.com"> <!-- prefetch the dns, speeds up loading of ads -->
+  <script id="facebook-jssdk" src="//connect.facebook.net/en_GB/all.js#xfbml=1&amp;appId=173970116068270"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/acv=5e636c62d6/cloudflare.min.js"></script><script type="text/javascript">
+//<![CDATA[
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/acv=964071af18/"},atok:"8cf529c445845d65fc068f2431ec5d35",petok:"f27d7944be72bbef5699f7cf7b25c5832d97a5e4-1387822650-1800",zone:"manaflask.com",rocket:"0",apps:{"ga_key":{"ua":"UA-16797140-1","ga_bs":"2"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/acv=5e636c62d6/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+//]]>
+</script>
+<link rel="dns-prefetch" href="//www.googletagservices.com"> <!-- prefetch the dns, speeds up loading of ads -->
   <!-- [if not IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-6.newrelic.com","errorBeacon":"jserror.newrelic.com","licenseKey":"afee39507c","applicationID":"1684135","transactionName":"IllXEBBcDQ9SFBxFWQZTSktKXBULUhQa","queueTime":0,"applicationTime":19,"ttGuid":"","agentToken":null,"agent":"js-agent.newrelic.com/nr-248.min.js","extra":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),e[a].push(b),void 0)}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],"SvQ0B+":[function(a,b){function c(a){if(a===window)return 0;if(e.call(a,"__nr"))return a.__nr;try{return Object.defineProperty(a,"__nr",{value:d,writable:!1,configurable:!1,enumerable:!1}),d}catch(b){return a.__nr=d,d}finally{d+=1}}var d=1,e=Object.prototype.hasOwnProperty;b.exports=c},{}],id:[function(a,b){b.exports=a("SvQ0B+")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info,b=m.proto="http"+(a.sslForHttp?"s":"s"==l[4]?"s":"")+"://";if(a&&a.agent&&a.licenseKey&&a.applicationID){f("mark",["onload",e()]);var c=h.createElement("script");c.src=b+a.agent,h.body.appendChild(c)}}function d(){"complete"===h.readyState&&f("mark",["domContent",e()])}function e(){return(new Date).getTime()}var f=a("handle"),g=window,h=g.document,i="readystatechange",j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:e(),origin:l};h[j]?(h[j](i,d,!1),g[j]("load",c,!1)):(h[k]("on"+i,d),g[k]("onload",c)),f("mark",["firstbyte",e()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
   <![endif] -->
   <!-- [if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=9"/>
   <![endif] -->
   <meta http-equiv="content-language" content="en">
   <title>Manaflask | Privacy Policy</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Manaflask is a World of Warcraft focused internet gaming portal dedicated to bringing premium content and community events presented in both English and German, created by top teams and individuals.">
+  <meta name="keywords" content="manaflask, raiding, wow, warcraft">
   <meta name="author" content="manaflask.com">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link href="/assets/application-f16d032cd27db07da396313d7124f0d4.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/assets/application-df6e4163c36e96ccca1b1ff098861c70.css" media="all" rel="stylesheet" type="text/css">
   <!--[if lte IE 9]>
     <link href="/assets/application-ie-51cdfb2963c5f2198b94e597f805013a.css" media="all" rel="stylesheet" type="text/css" />
   <![endif]-->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_GB/all.js#xfbml=1&amp;appId=173970116068270"></script><script src="/assets/application-dcbee2eb8812574d7271f3f4c314027d.js" type="text/javascript"></script>
-      <script type="text/javascript">
-    (function() {
-    var useSSL = 'https:' == document.location.protocol;
-    var src = (useSSL ? 'https:' : 'http:') +
-    '//www.googletagservices.com/tag/js/gpt.js';
-    document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
-    })();
-    </script><script src="https://www.googletagservices.com/tag/js/gpt.js"></script>
+  <script src="/assets/application-cee79a0bcbecf84635190a1b23ef23df.js" type="text/javascript"></script><style>.cke{visibility:hidden;}</style>
+  <script type="text/javascript" src="https://script.ioam.de/iam.js"></script>
 
-    <script type="text/javascript">
-    googletag.defineSlot("/1020652/manaflask.de-Rectangle", [300, 250], "div-gpt-ad-1361952623587-3").addService(googletag.pubads());
-    googletag.defineSlot("/1020652/manaflask.de-ContentAd", [300, 250], "div-gpt-ad-1361952623587-2").addService(googletag.pubads());
-    googletag.defineSlot("/1020652/manaflask.de-Bigsize_Banner", [728, 90], "div-gpt-ad-1361952623587-1").addService(googletag.pubads());
-    googletag.defineSlot("/1020652/manaflask.de-Skyscraper_160", [160, 600], "div-gpt-ad-1361952623587-5").addService(googletag.pubads());
-    googletag.defineSlot("/1020652/manaflask.de-Site_Branding", [1, 1], "div-gpt-ad-1361952623587-4").addService(googletag.pubads());
-    googletag.defineSlot("/1020652/manaflask.de-AdLayer", [2, 2], "div-gpt-ad-1361952623587-0").addService(googletag.pubads());
-    googletag.pubads().enableSyncRendering();
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-    </script>
+<script type="text/javascript">
+(function() {
+var useSSL = 'https:' == document.location.protocol;
+var src = (useSSL ? 'https:' : 'http:') +
+'//www.googletagservices.com/tag/js/gpt.js';
+document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>');
+})();
+</script><script src="https://www.googletagservices.com/tag/js/gpt.js"></script>
 
-  
+<script type="text/javascript">
+googletag.defineSlot("/1020652/manaflask.de-Rectangle", [300, 250], "div-gpt-ad-1361952623587-3").addService(googletag.pubads());
+googletag.defineSlot("/1020652/manaflask.de-ContentAd", [300, 250], "div-gpt-ad-1361952623587-2").addService(googletag.pubads());
+googletag.defineSlot("/1020652/manaflask.de-Bigsize_Banner", [728, 90], "div-gpt-ad-1361952623587-1").addService(googletag.pubads());
+googletag.defineSlot("/1020652/manaflask.de-Skyscraper_160", [160, 600], "div-gpt-ad-1361952623587-5").addService(googletag.pubads());
+googletag.defineSlot("/1020652/manaflask.de-Site_Branding", [1, 1], "div-gpt-ad-1361952623587-4").addService(googletag.pubads());
+googletag.defineSlot("/1020652/manaflask.de-AdLayer", [2, 2], "div-gpt-ad-1361952623587-0").addService(googletag.pubads());
+googletag.pubads().enableSyncRendering();
+googletag.pubads().enableSingleRequest();
+googletag.enableServices();
+</script>
+
   <meta content="authenticity_token" name="csrf-param">
-<meta content="d824babd69c1bc9790bfd17be7d6d6c67f92bbf6e45a9359faf1a0f9c2095954" name="csrf-token">
-<script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script></head>
+<meta content="e76b466d2990ffbb5838d0734fa98e22d4e2223f097401608a5b372b506994b8" name="csrf-token">
+<script type="text/javascript">
+/* <![CDATA[ */
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-16797140-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
+(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
+/* ]]> */
+</script>
+</head>
 <body id="page-pages" class="privacy">
   <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -62,16 +85,22 @@
   <script type="text/javascript">
     var IVW="http://gamona.ivwbox.de/cgi-bin/ivw/CP/mf_comp";
     document.write("<img src='"+IVW+"?r="+escape(document.referrer)+"&d="+(Math.random()*100000)+"' width='1' height='1' alt='szmtag' />");
-  </script><img src="http://gamona.ivwbox.de/cgi-bin/ivw/CP/mf_comp?r=&amp;d=66225.38143581583" width="1" height="1" alt="szmtag">
+  </script><img src="http://gamona.ivwbox.de/cgi-bin/ivw/CP/mf_comp?r=&amp;d=54301.74753470789" width="1" height="1" alt="szmtag">
   <noscript>
-    <img src="http://gamona.ivwbox.de/cgi-bin/ivw/CP/mf_comp?d=32" width="1" height="1" alt="szmtag" />
+    <img src="http://gamona.ivwbox.de/cgi-bin/ivw/CP/mf_comp?d=81" width="1" height="1" alt="szmtag" />
   </noscript>
-  </div>
-  <script type="text/javascript">
-    var szmvars="gamona//CP//mf_comp";
-  </script>
-  <script src="http://gamona.ivwbox.de/2004/01/survey.js" type="text/javascript">
-  </script>
+</div>
+
+<script type="text/javascript">
+    var iam_data = {
+    "st":"gamona",
+    "cp":"mfe_comp",
+    "sv":"in",
+    "co":""
+    }
+    iom.c(iam_data);
+</script>
+
 
   <header role="header" id="page-header" class="cf">
     <div id="main-bar" class="content-left cf">
@@ -80,9 +109,6 @@
         <ul class="hoz-list pos-left"> <!-- [DEV] has class "minify" for search bar padding -->
           <li>
             <a href="/en">Frontpage</a>
-          </li>
-          <li>
-            <a href="/en/discussions">Discussions</a>
           </li>
           <li>
             <a href="/en/articles">Features</a><!-- <a href="" class="active">Features</a> -->
@@ -231,7 +257,7 @@
     </script></div>
 
     <aside id="gamona-sponsor">
-      <a href="http://gamona.de"><img alt="Gamona_partner_deutsch" src="/assets/gamona_partner_deutsch-cb60ac7c10f5e9b7d49b32e96972d68d.png"></a>
+      <a href="http://gamona.de"><img alt="Gamona_partner_deutsch" src="/assets/gamona_partner_deutsch-a70c2af670ebf391829a78c9e0763f47.png"></a>
     </aside>
 
   </div>
@@ -240,18 +266,7 @@
   </div>
 
   
-  <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-16797140-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+  <script type="text/javascript">/* CloudFlare analytics upgrade */
 </script>
   <script type="text/javascript">
 //<![CDATA[
@@ -283,17 +298,5 @@
 
 //]]>
 </script>
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
-NREUMQ.push(["load",new Date().getTime()]);
-var e=document.createElement("script");
-e.type="text/javascript";
-e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "rpm-images.newrelic.com/42/eum/rum.js";
-document.body.appendChild(e);
-if(NREUMQ.a)NREUMQ.a();
-};
-NREUMQ.a=window.onload;window.onload=NREUMQ.f;
-};
-NREUMQ.push(["nrfj","beacon-3.newrelic.com","afee39507c","1684135","IllXEBBcDQ9SFBxFWQZTSktKXBULUhQa",0,20,new Date().getTime(),"","","","",""]);</script>
 
-<script type="text/javascript" src="https://rpm-images.newrelic.com/42/eum/rum.js"></script></body></html>
+</body></html>
