--- a/f/fi/fin/findallwords.com.html
+++ b/f/fi/fin/findallwords.com.html
@@ -1,9 +1,11 @@
-<!--The following is the downloaded HTML source of the findallwords.com privacy policy that was archived on 2013-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130608154333id_/http%3A//www.findallwords.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the findallwords.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223212420id_/http%3A//www.findallwords.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+
+
 <title>Privacy Policy</title>
 
 <meta name="description" content="Privacy Policy">
@@ -18,8 +20,7 @@
 
 
 
-
-<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-31466634-1']);
@@ -34,58 +35,95 @@
 </script>
 
 
-
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "6fa90dd6-6a33-4d2d-ae46-88f8f0aa9929", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 
 
 
-<body bgcolor="#263719">
+<body background="background.png">
 
 
 
 
-<table border="0" width="900" align="center" cellpadding="15" cellspacing="0" bgcolor="white">
-  <tbody><tr> <td height="50" valign="middle" colspan="3" style="padding:0px;" background="images/template/topbar1bg.jpg" bgcolor="blue">  </td></tr>
-  <tr> 
+<table border="0" width="1000" align="center" cellpadding="15" cellspacing="0" bgcolor="white" style="webkit-box-shadow: 0 0 30px -4px #999;
+-moz-box-shadow: 0 0 30px -4px #999; box-shadow: 0 0 30px -4px #999;">
+    <tbody><tr> 
 
-<td height="91" valign="middle" colspan="3" style="padding:0px;" background="images/template/topbar2bg.jpg" bgcolor="blue"> 
+<td height="90" valign="middle" colspan="3" style="padding:0px;" bgcolor="444444" background="header.jpg"> 
 <div style="float:right;">
 
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-5653406625910829";
-/* Leaderboard */
-google_ad_slot = "6062798139";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
 </div>
-
-<h4><a style="color:white" href="./">www.findallwords.com</a></h4>
-
+<h4 style="font-size:26px;;letter-spacing:4px;font-weight:normal;margin:0;text-align:center;"><a style="color:white" href="./">www.FindAllWords.com</a></h4>
+<div style="text-align:center;float:left;width:750px;margin-left:140px;margin-top:5px;">
+<span class="st_googleplus_large" displaytext="Google +"></span>
+<span class="st_facebook_large" displaytext="Facebook"></span>
+<span class="st_fblike_large" displaytext="Facebook Like"></span>
+<span class="st_twitter_large" displaytext="Tweet"></span>
+<span class="st_pinterest_large" displaytext="Pinterest"></span>
+<span class="st_stumbleupon_large" displaytext="StumbleUpon"></span>
+<span class="st_email_large" displaytext="Email"></span>
+</div>
+<div style="float:right;position:relative;bottom:10px;width:123px;">
+</div>
 
 </td>
 
 
 </tr>
   <tr> <td valign="middle" colspan="3" background="images/template/rivots.jpg" style="padding:0px;" bgcolor="gray">  </td></tr>
-  <tr> <td width="90" rowspan="2" valign="top" style="border-right-style: solid;border-right-width: 3px; border-right-color: gray;"><br><br><br><br>
+  <tr> 
+       <td height="100" width="990" valign="top">
+
+ <h1 align="center">Privacy Policy</h1>
+<center>
 <script type="text/javascript"><!--
-google_ad_client = "ca-pub-5653406625910829";
-/* Findallwords-left */
-google_ad_slot = "7070373284";
-google_ad_width = 120;
-google_ad_height = 600;
+google_ad_client = "ca-pub-3571196989589180";
+/* findallwordCOM72890 */
+google_ad_slot = "8583186795";
+google_ad_width = 728;
+google_ad_height = 90;
 //-->
 </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<script type="text/javascript" src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-</td>
-       <td height="100" width="690" valign="top">
+</center><br>
+<div style="width:970px;padding-left:30px;">
 
- <h1 align="center">Privacy Policy</h1><p>
+<hr><div class="flags" style="width:790px;margin:0 auto;text-align:center;">
+<a href="wordfinder_index_en.php" rel="noindex, nofollow" title="English"><img src="./images/flags/gb.gif" alt="English"></a>
+<a href="wordfinder_index_en.php" rel="noindex, nofollow" title="English"><img src="./images/flags/us.gif" alt="English"></a>
+<a href="wordfinder_index_nl.php" rel="noindex, nofollow" title="Nederlands"><img src="./images/flags/nl.gif" alt="Nederlands"></a>
+<a href="wordfinder_index_es.php" rel="noindex, nofollow" title="Español"><img src="./images/flags/es.gif" alt="Español"></a>
+<a href="wordfinder_index_se.php" rel="noindex, nofollow" title="Svensk"><img src="./images/flags/se.gif" alt="Svensk"></a>
+<a href="wordfinder_index_dk.php" rel="noindex, nofollow" title="Danksk"><img src="./images/flags/dk.gif" alt="Danksk"></a>
+<a href="wordfinder_index_fr.php" rel="noindex, nofollow" title="Français&quot;"><img src="./images/flags/fr.gif" alt="Français"></a>
+<a href="wordfinder_index_de.php" rel="noindex, nofollow" title="Deutsch"><img src="./images/flags/de.gif" alt="Deutsch"></a>
+<a href="wordfinder_index_no.php" rel="noindex, nofollow" title="Norsk"><img src="./images/flags/no.gif" alt="Norsk"></a>
+<a href="wordfinder_index_it.php" rel="noindex, nofollow" title="Italiano"><img src="./images/flags/it.gif" alt="Italiano"></a>
+<a href="wordfinder_index_ma.php" rel="noindex, nofollow" title="Malay"><img src="./images/flags/ma.gif" alt="Malay"></a>
+<a href="wordfinder_index_za.php" rel="noindex, nofollow" title="Afrikaans"><img src="./images/flags/za.gif" alt="Afrikaans"></a>
+<a href="wordfinder_index_fi.php" rel="noindex, nofollow" title="Finsk"><img src="/images/flags/fi.gif" alt="Finsk"></a>
+<a href="wordfinder_index_pt.php" rel="noindex, nofollow" title="Portugues"><img src="/images/flags/pt.gif" alt="Portugues"></a>
+<a href="wordfinder_index_pt.php" rel="noindex, nofollow" title="Portugues"><img src="/images/flags/brazil.gif" alt="Portugues"></a><br>
+<font size="2">
+<a href="wordfinder_index_csw.php" rel="noindex, nofollow" title="CSW12">CSW12 (SOWPODS)</a>
+<a href="wordfinder_index_owl.php" rel="noindex, nofollow" title="OWL2">OWL2 (TWL)</a>
+<a href="wordfinder_index_countries.php" rel="noindex, nofollow" title="Countries">Countries</a>
+<a href="wordfinder_index_cities.php" rel="noindex, nofollow" title="Cities">Cities</a>
+</font>
+</div>
+<br><center>
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- FindAllWordsCOM728_15 -->
+<ins class="adsbygoogle" style="display:inline-block;width:728px;height:15px" data-ad-client="ca-pub-3571196989589180" data-ad-slot="6409411998"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></center>
+
+
+<p>
 Privacy Policy for www.findallwords.com
 </p>
 <p>
@@ -122,67 +160,33 @@ You should consult the respective privacy policies of these third-party ad serve
 </p>
 <p>
 If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites.
-</p></td>
+</p>
 
-
-       <td rowspan="2" valign="top" style="border-left-style: solid; border-left-width: 0px; border-left-color: gray;">
-
-
-
-<div align="right">
-<a href="privacypolicy.php" rel="noindex, nofollow" title="Link URL">Link URL</a>
-</div>
-<br><br><hr>
-<a href="wordfinder_index_en.php" rel="noindex, nofollow" title="English"><img src="./images/flags/gb.gif" alt="English"></a>
-<a href="wordfinder_index_en.php" rel="noindex, nofollow" title="English"><img src="./images/flags/us.gif" alt="English"></a>
-<a href="wordfinder_index_nl.php" rel="noindex, nofollow" title="Nederlands"><img src="./images/flags/nl.gif" alt="Nederlands"></a>
-<a href="wordfinder_index_es.php" rel="noindex, nofollow" title="Español"><img src="./images/flags/es.gif" alt="Español"></a>
-<a href="wordfinder_index_se.php" rel="noindex, nofollow" title="Svensk"><img src="./images/flags/se.gif" alt="Svensk"></a>
-<a href="wordfinder_index_dk.php" rel="noindex, nofollow" title="Danksk"><img src="./images/flags/dk.gif" alt="Danksk"></a>
-<a href="wordfinder_index_fr.php" rel="noindex, nofollow" title="Français&quot;"><img src="./images/flags/fr.gif" alt="Français"></a>
-<a href="wordfinder_index_de.php" rel="noindex, nofollow" title="Deutsch"><img src="./images/flags/de.gif" alt="Deutsch"></a>
-<a href="wordfinder_index_no.php" rel="noindex, nofollow" title="Norsk"><img src="./images/flags/no.gif" alt="Norsk"></a>
-<a href="wordfinder_index_it.php" rel="noindex, nofollow" title="Italiano"><img src="./images/flags/it.gif" alt="Italiano"></a>
-<a href="wordfinder_index_ma.php" rel="noindex, nofollow" title="Malay"><img src="./images/flags/ma.gif" alt="Malay"></a>
-<a href="wordfinder_index_za.php" rel="noindex, nofollow" title="Afrikaans"><img src="./images/flags/za.gif" alt="Afrikaans"></a>
-<a href="wordfinder_index_fi.php" rel="noindex, nofollow" title="Finsk"><img src="/images/flags/fi.gif" alt="Finsk"></a>
-<a href="wordfinder_index_pt.php" rel="noindex, nofollow" title="Portugues"><img src="/images/flags/pt.gif" alt="Portugues"></a><br>
-<font size="2">
-<a href="wordfinder_index_csw.php" rel="noindex, nofollow" title="CSW12">CSW12 (SWOPODS)</a><br>
-<a href="wordfinder_index_owl.php" rel="noindex, nofollow" title="OWL2">OWL2 (TWL)</a>
-</font>
-<br><br><!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone"></div>
-
-<!-- Place this tag after the last +1 button tag. -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
-
-<br>
-<br>
-
-<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.findallwords.com&amp;send=false&amp;layout=button_count&amp;width=150&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:150px; height:21px;" allowtransparency="true"></iframe>
-
-</td>
+</div></td>
        </tr>
 
   <tr><td height="10"><center></center></td></tr>
 
 
 </tbody></table>
-<center>
+<center style="
+border-top-width: 0px;
+border-right-width: 0px;
+border-bottom-width: 0px;
+border-left-width: 0px;
+width: 1000px;
+-webkit-margin-start: auto;
+-webkit-margin-end: auto;
+border-spacing: 0px;
+background-color: #444;
+color:#fff;
+padding: 10px 15px 10px 15px;margin: 0 auto;">
 
 Copyright 2013 |
 <!--<a href="info.php" style="color: #000000">Info</a> |-->
-<a href="sitemap.php" style="color: #000000">Sitemaps</a> |
-<a rel="author" href="https://plus.google.com/100622319533174309253" style="color: #000000">Google+</a> |
-<a href="contact.php" style="color: #000000">Contact</a> |
-<a href="privacypolicy.php" style="color: #000000">Privacy Policy</a>
+<a href="sitemap.php" style="color: #FFF">Sitemaps</a> |
+<a rel="author" href="https://plus.google.com/100622319533174309253" style="color: #FFF">Google+</a> |
+<a href="privacypolicy.php" style="color: #FFF">Privacy Policy</a>
 
 
 
@@ -192,16 +196,20 @@ Copyright 2013 |
 <center>
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=7916661; 
+var sc_project=9455244; 
 var sc_invisible=1; 
-var sc_security="0e0c219e"; 
-</script>
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-<noscript><div class="statcounter"><a title="web analytics"
-href="http://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="http://c.statcounter.com/7916661/0/0e0c219e/1/"
-alt="web analytics"></a></div></noscript>
+var sc_security="a4b137af"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type=text/javascript src=" +
+scJsHost+
+"statcounter.com/counter/counter.js></"+"script>");
+</script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="free web stats"
+href="http://statcounter.com/free-web-stats/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9455244/0/a4b137af/1/"
+alt="free web stats"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 </center>
 
