worldsiteindex.com (archived on 2013-12-23)
{
  "alexa_rank": 89379,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 4035,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.24,
  "homepage_snapshot_redirected_domain": "worldsiteindex.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131003024254id_/http://www.worldsiteindex.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131003024254id_/http%3A//worldsiteindex.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "worldsiteindex.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223232936id_/http%3A//www.worldsiteindex.com/site/privacy-policy.html",
  "policy_title": "WorldSiteIndex - Privacy Policy",
  "policy_url": "worldsiteindex.com/site/privacy-policy.html",
  "sha1": "4b9cb9c6132c20ccc7efcc52a88bc3c87616f49c",
  "simhash": 11475898744694069722,
  "simhash_updated": false,
  "site_hostname": "worldsiteindex.com",
  "site_url": "http://worldsiteindex.com",
  "smog": 11.92,
  "strict_updated": true,
  "timestamp": "20131223232936",
  "word_count": 700,
  "year": 2013
}

--- a/w/wo/wor/worldsiteindex.com.html
+++ b/w/wo/wor/worldsiteindex.com.html
@@ -1,77 +1,229 @@
-<!--The following is the downloaded HTML source of the worldsiteindex.com privacy policy that was archived on 2013-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130510055533id_/http%3A//www.worldsiteindex.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldsiteindex.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223232936id_/http%3A//www.worldsiteindex.com/site/privacy-policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><!-- InstanceBegin template="/Templates/1cols.dwt" codeOutsideHTMLIsLocked="false" --><head>
-		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<!-- InstanceBeginEditable name="head" -->
-		<title>Privacy policy for World Site Index, a searchable directory of websites organised by subject</title>
-		<meta name="description" content="Privacy policy for World Site Index, a searchable directory of websites organised by subject.">
-		<meta name="keywords" content="web directory, website directory, search the web, free listing">
-		<!-- InstanceEndEditable -->	
-		<meta name="language" content="en">
-		<link type="text/css" href="/site.css" rel="stylesheet" media="screen">
-		<meta name="MSSmartTagsPreventParsing" content="TRUE">
-		<meta name="language" content="en">
-		<meta name="author" content="www.tolranet.co.uk">
-		<link rel="alternate" type="application/rss+xml" title="Latest listings" href="/feeds/rss.php">
-	</head>
-	<body>
-<div class="width"><div class="minwidth">
-		<div id="pgframe"><div id="pgframel"><div id="pgframer">
-			<div id="titlebox">
-				<a href="http://www.worldsiteindex.com/" title="World Site Index Web Directory" id="logo"><img src="/images/logo.gif" alt="World Site Index" width="346" height="92"></a>
-				<form id="searchForm" action="/index.php" method="get">
-					<p><label for="q">Search for</label>: <input type="text" name="q" id="q" size="32" tabindex="1">&nbsp;<input type="submit" name="ds" value="Search" tabindex="2"></p>			
-				</form>
-				<div class="clear"></div>
+<!DOCTYPE html><html lang="en"><head>
+	<meta charset="utf-8">
+	<title>WorldSiteIndex - Privacy Policy</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<base href="http://www.worldsiteindex.com/site/">
+	
+	
+	<meta name="author" content="TOLRAnet AU">
+	<meta name="robots" content="noodp,noydir">
+	<meta name="MSSmartTagsPreventParsing" content="TRUE">
+	<meta name="language" content="en">
+	<meta name="author" content="www.tolranet.co.uk">
+	<link href="system/app/chunks/fusion.min.css" rel="stylesheet" type="text/css">
+	<link href="/site/style.css" rel="stylesheet" type="text/css">
+	<!--[if lt IE 9]>
+	<script type="text/javascript" src="system/app/chunks/html5shiv.js"></script>
+	<![endif]-->
+	
+<script type="text/javascript" src="system/app/js/jquery.min.js"></script>
+<script type="text/javascript" src="system/libs/js/fusionLib.jQuery.js"></script>
+<script type="text/javascript" src="system/app/chunks/fusionCSS.js"></script>
+</head>
+<body>
+	<section class="row">
+        <div class="span5 offset7 topNav">
+<a href="http://www.worldsiteindex.com" title="Submission Guidelines">Directory</a>  <a href="/site/link-to-us.html" title="Rates">Link to Us</a>  <a href="/site/advertise-here.html" title="Advertising">Advertise Here</a>  
+		</div>
+	</section>
+
+	<header>
+		<div class="row">
+			<div class="span6">
+				<a href="http://www.worldsiteindex.com/" title="World Site Index Web Directory" id="logo"><img src="assets/public_files/images/logo.png" alt="World Site Index"></a>
+				<h1>sitename</h1>
 			</div>
-<!-- #BeginLibraryItem "/Library/tabs.lbi" --><ul id="tabs">
-	<li id="activetab"><span>Web Directory</span></li>
-	<li><a href="http://business.worldsiteindex.com/currency/converter.php">Currency Converter</a></li>
-	<li><a href="http://blog.worldsiteindex.com/">Blog</a></li>
-	<li><a href="http://worldsiteindex.mobi/">Mobile Web Directory</a></li>
-	<li><a href="http://www.worldsiteindex.com/themes/">Free Themes</a></li>
-	<li><a href="/wdirn0">New Sites</a></li>
-</ul><!-- #EndLibraryItem --><!-- InstanceBeginEditable name="pathway" -->
-			<div id="pathway"><a href="http://www.worldsiteindex.com/">Web Directory</a> / Privacy Policy</div>
-<!-- InstanceEndEditable -->
-			<div id="contentin">
-<!-- InstanceBeginEditable name="body" -->
-<h1>Privacy Policy</h1>
-<p><b>Definitions </b></p>
+			<div class="span6">
+				<div class="searchform">
+					<form id="searchForm" action="/index.php" method="get">
+						<label for="q">Search for</label>: <input type="text" name="q" id="q" size="32" tabindex="1">&nbsp;<input type="submit" name="ds" value="Search" tabindex="2">
+					</form>
+				</div>
+				<div class="memberLogin"><a href="" title="Member Login">SUBMIT URL</a></div>
+			</div>
+		</div>
+	</header>
+
+	<nav>
+		<div class="row">
+			<ul class="hnav collapseMenu hidden-phone">
+				<li><a href="http://www.worldsiteindex.com">Home</a></li>
+				<li><a href="/site/submission-guidelines.html" title="Submission Guidelines">Submission Guidelines</a></li>
+				<li><a href="/site/rates.html" title="Rates">Rates</a></li>
+				<li><a href="/site/contact-us.html">Contact Us</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<section class="hero-unit">
+
+		<div class="row">
+			<div class="span4 center">
+				<img class="hidden-phone" style="height:120px" src="assets/public_files/images/wsi.png" alt="World Site Index">
+				</div>
+			<div class="span8">
+			<section class="featuredBox">
+				<p class="center"><strong>WorldSiteIndex is a searchable human edited web directory of English language sites organised by categories, and optimized for use on mobile devices!<br><a href="http://www.worldsiteindex.com/" title="WorldSiteIndex Directory">Submit your website</a> for review &amp; inclusion in the directory. </strong></p>
+			</section>
+
+			</div>
+		</div>
+	</section>
+	
+	
+		<section class="main">
+		<div class="row">
+			<div class="span4">
+				<section class="socnets"><a href="http://www.twitter.com/worldsiteindex" title="Follow WorldSiteIndex on Twitter"><img class="hidden-phone" src="assets/public_files/images/twitter.png" alt="Follow WorldSiteIndex on Twitter"></a>		<a href="https://plus.google.com/105526104031621828092/posts?" title="Join WorldSiteIndex on Google Plus"><img class="hidden-phone" src="assets/public_files/images/google.png" alt="Join WorldSiteIndex on Google Plus"></a>		<a href="http://www.worldsiteindex.com/feeds/rss.php" title="RSS Feed"><img class="hidden-phone" src="assets/public_files/images/rss.png" alt="RSS Feed"></a>	
+				</section>	
+					<p class="center"><strong>WorldSiteIndex also brings you news on what's trending &amp; being discussed on the web.</strong></p>		
+				<nav class="vMenu">
+					<h2 class="siteIndex">Site Index</h2>
+					<ul><li><a href="/site/">Directory &amp; Search</a></li><li><a href="/site/terms-conditions.html">Terms &amp; Conditions</a></li><li class="active"><a href="/site/privacy-policy.html">Privacy Policy</a></li><li><a href="/site/rates.html">Submission Rates</a></li><li><a href="/site/advertise-here.html">Advertise Here</a></li><li><a href="/site/link-to-us.html">Link to Us</a></li><li><a href="http://www.worldsiteindex.com/feeds/rss.php">Latest Listings Feed</a></li><li><a href="/site/contact-us.html">Contact Us</a></li><li><a href="/site/publishing-news-to-world-site-index.html">How to Publish News</a></li><li><a href="/site/submission-guidelines.html">Submission Guidelines</a></li></ul>
+				</nav>
+				<section class="google">
+					<script async="" src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- WSI - Front Page -->
+						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-2315842291555166" data-ad-slot="4023844899"></ins>
+						 <script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</section>
+			</div>	
+			
+			<div class="span8">
+				<h2>Privacy Policy</h2>
+				<hr>
+				<p>&nbsp;</p>
+					
+<p><span style="font-weight: bold;">Definitions </span></p>
 <p>"The Owners" means TOLRA Micro Systems Limited.</p>
-<p><b>Introduction</b></p>
+<p><span style="font-weight: bold;">Introduction</span></p>
 <p>"The Owners" consider issues relating to your privacy to be a serious matter. As such, "The Owners" have created and implemented this Privacy Policy so that you understand what "The Owners" may and may not do with certain personal information. "The Owners" encourage you to review this Privacy Policy.</p>
-<p><b>What information do we collect?</b></p>
+<p><span style="font-weight: bold;">What information do we collect?</span></p>
 <p>On some parts of the website we may ask you to register, and if you do we may ask for your name, company names, addresses, telephone numbers, fax numbers, e-mail addresses and specific business interests and some other personal information. We may also use cookies.</p>
 <p>For an explanation, see the section on cookies below.</p>
-<p><b>Use of cookies</b></p>
+<p><span style="font-weight: bold;">Use of cookies</span></p>
 <p>Cookies are a unique identifier that is sent to your Internet browser. The Internet browser may then store the cookie on your hard drive. Cookies can be used to track a visitor to a website as the visitor navigates the website and to store information. They can inform the website what pages you visit, when you last visited and your preferences, which enable websites to provide you with a more personalised service. If a visitor requests a specific language is used, a cookie will be used to record this information so that the visitor does not need to specify his or her language preference for each web page that is delivered to the visitor's browser. You can set your browser to refuse cookies, or to warn you before accepting them. We may use cookies, but most parts of our site can be accessed even if your cookies are turned off.</p>
 <ul>
 	<li>Google, as a third-party vendor, uses cookies to serve ads on this site.</li>
 	<li>Google's use of the DART cookie enables it to serve ads to you based on visit to other sites on the Internet.</li>
 	<li>You may opt out of the use of the DART cookie by visiting the <a href="http://www.google.co.uk/privacy_ads.html">Google ad and content network privacy policy</a>.</li>
 </ul>
-<p><b>Uses of Information</b></p>
+<p><span style="font-weight: bold;">Uses of Information</span></p>
 <p>We use the information to help us understand more about how our website is used and to improve our site. "The Owners" only use personal information for the purpose for which it was provided and certain other activities, which are reasonably ancillary to such purpose. For example, if you send us an e-mail with a question or comment, "The Owners" will use your e-mail address to respond to you. Also, "The Owners" may store your e-mail and e-mail address and a copy of our response for future reference. "The Owners" may also use and disclose personal information that is relevant to a legal proceeding or as required by law.</p>
-<p><b>Do we share information?</b></p>
+<p><span style="font-weight: bold;">Do we share information?</span></p>
 <p>We do not sell your personal information to others. Some of our products are hosted by third parties but we agree with those third parties that they will keep your information secure and not use it for other purposes. If you sign up for services that are managed or offered by other organisations, they will obtain your information. A number of other people's websites have links on our site. If you link to their sites, they may collect information. Such sites are not within our control and are not covered by this privacy policy.</p>
-<p><b>How long is the Information Kept?</b></p>
+<p><span style="font-weight: bold;">How long is the Information Kept?</span></p>
 <p>"The Owners" will only keep the personal information for so long as it is useful. At the conclusion of such time, "The Owners" will delete this information.</p>
-<p><b>Submitted Sites</b></p>
+<p><span style="font-weight: bold;">Submitted Sites</span></p>
 <p>If you submit a website to this directory then you are agreeing to allow "The Owners" to make any or all parts of the information you enter publicly available (excluding your email address). Where applicable this clause supersedes any other clause within this document that may be in conflict with it.</p>
-<p><b>Additional Information</b></p>
+<p><span style="font-weight: bold;">Additional Information</span></p>
 <p>This site contains links to other sites. "The Owners" are not responsible for the content or privacy practices of these sites.</p>
 <p>We reserve the right to make changes to the privacy policy at any time. Please check back from time to time to ensure that you are aware of these changes.</p>
-<p>Any questions relating to this privacy policy may be sent through our contact page.</p>
-<!-- InstanceEndEditable -->
+<p>Any questions relating to this privacy policy may be sent through our contact page.</p> 
+				
 			</div>
-			<div id="footer">
-				<p class="right"><a href="/contact.php" title="Contact World Site Index">Contact</a> | <a href="/linktous.html">Link to Us</a> | <a href="/termsofuse.html">Terms of Use</a> | <a href="/privacy.html">Privacy</a> | <a href="/feeds/rss.php" class="feed">Latest Listings Feed</a></p>
-				<p>Copyright © 2004 - 2012 <a href="http://www.tolranet.co.uk/">TOLRA Micro Systems Limited</a>. All rights reserved.</p>
-			</div>
-		</div></div></div>
-</div></div>
+		</div>
+	</section>
 	
+	
+	<section class="catContainer">		
+		<div class="row">
+			<div class="span4">
+&nbsp;
+			</div>
+			<div class="span8">
 
-<!-- InstanceEnd --></body></html>
+				<section class="categories">		
+				<h2 style="color:#335A9A">Directory Categories</h2>
+				<hr>
+				<div class="row">
+					<div class="span6">
+						<ul class="catblock">
+							<li><a href="/wdirc1461242839">Arts</a></li>
+							<li><a href="/wdirc1820984710">Business</a></li>
+							<li><a href="/wdirc966215543">Computers</a></li>
+							<li><a href="/wdirc738795637">Entertainment</a></li>
+							<li><a href="/wdirc257911315">Games</a></li>
+							<li><a href="/wdirc1546519531">Government</a></li>
+							<li><a href="/wdirc587208116">Health</a></li>
+							<li><a href="/wdirc1635142220">Home and Garden</a></li>
+						</ul>
+					</div>
+					<div class="span6">
+						<ul class="catblock">
+							<li><a href="/wdirc376446984">Internet</a></li>
+							<li><a href="/wdirc1055319784">News</a></li>
+							<li><a href="/wdirc894507847">Reference &amp; Education</a></li>
+							<li><a href="/wdirc390536795">Science</a></li>
+							<li><a href="/wdirc78035933">Shopping &amp; Services</a></li>
+							<li><a href="/wdirc1979445016">Society</a></li>
+							<li><a href="/wdirc1622020261">Sports and Recreation</a></li>
+							<li><a href="/wdirc1643483398">Travel and Tourism</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</div>
+		</div>
+	</section>
+
+	<section class="hero-unit2" style="display:none">
+		<div class="row">
+				<div class="center">
+&nbsp;
+				</div>
+		</div>
+	</section>
+
+
+
+	<footer>
+		<div class="row hidden-tablet">
+			<div class="span4">		
+				<section class="google">
+					<script async="" src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- WSI - Front Page -->
+						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-2315842291555166" data-ad-slot="4023844899"></ins>
+						 <script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</section>
+			</div>
+			<div class="span4">
+				<section class="google">
+					<script async="" src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- WSI - Front Page -->
+						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-2315842291555166" data-ad-slot="4023844899"></ins>
+						 <script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</section>
+			</div>
+
+			<div class="span4">
+				<section class="google">
+					<a href="http://clearfusioncms.com/" title="clearFusionCMS - Content Management System"><img src="assets/public_files/images/bottom-logo.png" alt="clearFusionCMS - Content Management System"></a><br>
+					<a href="http://clearfusioncms.com/" title="clearFusionCMS - Content Management System">clearFusionCMS - Content Management System</a>
+				</section>
+			</div>
+		</div>
+
+		<div class="copyright">
+			<div class="row">
+					<p>Copyright © 2003 - 2013 TOLRA Micro Systems Limited. All rights reserved.</p>
+			</div>
+		</div>
+	</footer>
+
+<script type="text/javascript">
+//<![CDATA[
+$fl(document).ready(function() { $fl.get('http://www.worldsiteindex.com/site/manager/cron/'); });
+//]]>
+</script>
+
+</body></html>
