--- a/c/cr/cro/crobo.com.html
+++ b/c/cr/cro/crobo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the crobo.com privacy policy that was archived on 2013-05-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130515112541id_/http%3A//www.crobo.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crobo.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224023311id_/http%3A//www.crobo.com/privacy-policy) for the most accurate reproduction.-->
 
 <html><head></head><body><div>
 	<hgroup>
@@ -18,7 +18,7 @@
 <p>The information collected by Covus Crobo GmbH will be exclusively used and saved for Covus services. In this case, the personal information that has been collected will be only used for services that require that information in order to personalize that particular service. The compliance with these terms will be held by Covus in a record. If you do not wish to comply with these terms, then our services will not be available to you. For the security of your data, every visit to our website will prompt the saving of the IP-address as well as date, time and the page visited. This information is strictly used for statistics and will be made anonymous when evaluated. Covus Crobo GmbH saves personal data on a separate server. Your information will only be used for the reasons that have been made known.
 </p>
 <h3>Propagation of Information</h3>
-<p>Personal information, as explained in section 2, will be exclusively used by Covus Crobo GmbH and only given to other companies which have complied with the terms you have agreed to. Furthermore, your data will not be given to third parties with the exception that the information is requested by a court or other governmental body and your written consent. For particular offers and deals, you have the opportunity to ask for advertisement materials. In this case, the transfer of data is necessary and it is made clear that you will have to agree to the terms. You can revoke your consent at any time by sending a letter to Covus Crobo GmbH, Schwedter Str. 263, 10119 or in the form of an email to <a href="mailto:info@covus.de">info@covus.de</a>.
+<p>Personal information, as explained in section 2, will be exclusively used by Covus Crobo GmbH and only given to other companies which have complied with the terms you have agreed to. Furthermore, your data will not be given to third parties with the exception that the information is requested by a court or other governmental body and your written consent. For particular offers and deals, you have the opportunity to ask for advertisement materials. In this case, the transfer of data is necessary and it is made clear that you will have to agree to the terms. You can revoke your consent at any time by sending a letter to Covus Crobo GmbH, Schwedter Str. 263, 10119 or in the form of an email to <a href="mailto:info@covus.de">info@crobo.com</a>.
 </p>
 <h3>Type of Evaluation</h3>
 <p>Covus Crobo GmbH carries out analysis of usage patterns of their websites in order to continually better their services. These evaluations are carried out with information that has been made anonymous. The who, when and what offer will, in no way, be provided to our advertising partners with the exception that the transfer of information has been consented to.
@@ -33,7 +33,7 @@
 <p>Due to technical reasons, it is not possible to create posts in the online forum of Covus Crobo GmbH if you do not allow cookies on your computer. However, you can choose to delete the cookies automatically upon leaving the forum by clicking “Logout” in the top right of the page. We recommend that you use the “Logout” option if other individuals have access to your computer.
 </p>
 <h3>Erasure of Personal Data</h3>
-<p>Your consent in relation to the collection and saving of your personal data by Covus Crobo GmbH can be revoked at any time by sending a letter to Covus Crobo GmbH, Schwedter Str. 263, 10119 Berlin or in the form of an email to <a href="mailto:info@covus.de">info@covus.de</a>.
+<p>Your consent in relation to the collection and saving of your personal data by Covus Crobo GmbH can be revoked at any time by sending a letter to Covus Crobo GmbH, Schwedter Str. 263, 10119 Berlin or in the form of an email to <a href="mailto:info@covus.de">info@crobo.com</a>.
 </p>
 <h3>Further Information on Data Privacy</h3>
 <p>Please take notice that personal information that you make available online (such as in a chat room, per email or in forums) can be collected by others and used. It is possible that you may receive unwanted messages if you post personal information in areas which are accessible by the public. That is why we recommend that you go about your business with care and with responsibility when online and that, under no circumstance, should you share your password or login information.
