--- a/k/ku/kun/kuntham.com.html
+++ b/k/ku/kun/kuntham.com.html
@@ -1,16 +1,25 @@
-<!--The following is the downloaded HTML source of the kuntham.com privacy policy that was archived on 2013-05-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130511071530id_/http%3A//kuntham.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kuntham.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224032839id_/http%3A//www.kuntham.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="http://www.kuntham.com/images/favicon.ico">
-<script>var _wau = _wau || []; _wau.push(["tab", "qmwxt0j7h035", "pzm", "right-middle"]);(function() { var s=document.createElement("script"); s.async=true; s.src="http://widgets.amung.us/tab.js";document.getElementsByTagName("head")[0].appendChild(s);})();</script><script async="" src="http://widgets.amung.us/tab.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script>var _wau = _wau || []; _wau.push(["tab", "qmwxt0j7h035", "pzm", "right-middle"]);(function() { var s=document.createElement("script"); s.async=true; s.src="http://widgets.amung.us/tab.js";document.getElementsByTagName("head")[0].appendChild(s);})();</script><script async="" src="http://widgets.amung.us/tab.js"></script>
 <title>Home - thefunnyplanet.com</title>
 <meta name="description" content="Your One-stop shop for All ur Quotes">
 <meta name="keywords" content="life,quotes,love,quotations,sayings,friendship quotes,friends,fun,funny,inspirational,great quotes,movie,famous quotes,motivational quotes">
 
 <link href="http://www.kuntham.com/style.css" rel="stylesheet" type="text/css">
-</head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43680269-1', 'kuntham.com');
+  ga('send', 'pageview');
+
+</script></head>
 
 <body>
     <div id="main" class="rounded">
@@ -31,15 +40,14 @@
 		</ul><div class="clear"></div></div>
         </div>            <div id="content">
     		<center><div id="ad"><script type="text/javascript"><!--
-google_ad_client = "ca-pub-7839850774143322";
-/* kuntham 728 90 */
-google_ad_slot = "8133592158";
+google_ad_client = "ca-pub-5987770876878730";
+/* MONETIZEMORE kuntham.com 728 x 90 Ad Unit #1 */
+google_ad_slot = "None/6883218106";
 google_ad_width = 728;
 google_ad_height = 90;
 //-->
 </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 			</div></center>
 	<h1>Privacy Policy</h1>
 
