--- a/t/tx/txt/txt180.com.html
+++ b/t/tx/txt/txt180.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the txt180.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624130050id_/http%3A//www.txt180.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the txt180.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224065410id_/http%3A//www.txt180.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>TXT180 Privacy Policy - Text Message Marketing</title>
@@ -128,6 +128,20 @@ If you feel that this site is not following its stated information policy, you m
   })();
 
 </script>
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 988840845;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/988840845/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 
 </body></html>
